assets/css/style.css
/* ... */
.jumbotron {
    padding: 20px;
    margin: 0;
    position: relative;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
        -ms-transform: translate(-50%, -50%);
            transform: translate(-50%, -50%);
    background: transparent;
    color: #fff;
    font-family: "Courgette", cursive;
}

.btn--cta {
    margin-top: 5px;
    border-radius: 25px;
    padding: 10px 15px;
}

.btn--coconut-cream {
    background-color:  #EAE2B7;
    border-color: #EAE2B7;
    color: #000;
}

.btn--coconut-cream:hover,
.btn--coconut-cream:active,
.btn--coconut-cream:focus,
.btn--coconut-cream:active:focus {
    background-color: #003049;
    color: #fff;
}

/* ----------- Madia Queries ----------- */
@media (max-width:767px) {
    .jumbotron h1 {
        font-size: 2rem;
    }

    .jumbotron h2 {
        font-size: 1.5rem;
    }
}

@media (max-width:575px){
    .footer-heading {
        text-align: center;
    }

    .social-icon-links {
        padding-bottom: 15px;
    }
}

@media (min-width: 575px) and (max-width: 767px) {
    .footer-container {
        max-width: 720px;
    }
}

/* ----------- Welcome section ----------- */
.welcome-title {
    margin: 10px 0;
    padding: 30px 10px;
}

.col-welcome {
    padding: 25px;
}

.welcome-image {
    border-radius: 0.8rem;
}

.description-text {
    font-size: 120%;
}

.btn-arrange-visit {
    background-color: #003049;
    border-color: #003049;
    color: #fff;
}

.btn-arrange-visit:hover,
.btn-arrange-visit:active,
.btn-arrange-visit:focus,
.btn-arrange-visit:active:focus {
    background:  #EAE2B7;
    border-color: #003049;
    color: #000;
}

@media (max-width:767px) {
    .welcome-title h2 {
        font-size: 2rem
    } 
}

@media (min-width: 575px) and (max-width: 767px) {
    .welcone-container {
        max-width: 720px;
    }
}

/* ----------- Why Choose us section ----------- */
#why-us {
    background-color: #fff;
}

.why-us-title-container {
    margin: 10px 0;
    padding: 30px 10px;
}

.col-card {
    padding: 25px;
}

#why-us .card {
    border-radius: 0.8rem;
    border: none;
    -webkit-box-shadow: 2px 3px 7px 2px rgba(0, 0, 0, 0.68);
            box-shadow: 2px 3px 7px 2px rgba(0, 0, 0, 0.68);
}

#why-us .card-top {
    border: none;
    padding: 16px 16px 5px;
}

#why-us .card-title {
    font-family: "Courgette", cursive;
    font-size: 1.25rem;
    margin: 0;
    background-color: #fff;
    border-top-left-radius: 0.8rem;
    border-top-right-radius: 0.8rem;
}

#why-us .card-body {
    padding: 0;
    border-bottom-left-radius: 0.8rem;
    border-bottom-right-radius: 0.8rem;
    position: relative;
    overflow: hidden;
    min-height: 350px;
}

#why-us .card-body-wave-image-container {
    width: 100%;
    height: 60px;
    background: url('../images/wave.png') no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

#why-us .card-body-content {
    padding: 20px;
    background-color: rgba(255, 255, 255, 0.9);
    position:absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    border-bottom-left-radius: 0.8rem;
    border-bottom-right-radius: 0.8rem;
    visibility: hidden;
}

.list-group {
    margin-top: 60px;
    margin-bottom: 20px;
}

.list-group-item {
    background-color: transparent;
    font-weight: 600;
}

#why-us .card-body-content .list-group {
    -webkit-transform: translateY(-100%);
        -ms-transform: translateY(-100%);
            transform: translateY(-100%);
}

#why-us .card-link-container {
    position: absolute;
    bottom: 0; 
    left: 0;
    right: 0;
    padding: 30px;
}

#why-us .card-body-content .card-link-container {
    -webkit-transform: translateY(100%);
        -ms-transform: translateY(100%);
            transform: translateY(100%);
}

#why-us .card:hover .card-body-content {
    visibility: visible;
}

#why-us .card:hover .list-group {
    -webkit-transform: translateY(0);
        -ms-transform: translateY(0);
            transform: translateY(0);
    -webkit-transition: all 0.65s ease-in-out;
    -o-transition: all 0.65s ease-in-out;
    transition: all 0.65s ease-in-out;
}

#why-us .card:hover .card-link-container {
    -webkit-transform: translateY(0);
        -ms-transform: translateY(0);
            transform: translateY(0);
    -webkit-transition: all 0.65s ease-in-out;
    -o-transition: all 0.65s ease-in-out;
    transition: all 0.65s ease-in-out;
}

.btn--card-cta {
    border-radius: 20px;
    padding: 5px 15px;
}

.btn--prussian-blue {
    background-color: #003049;
    border-color: #003049;
    color: #fff;
}

.btn--prussian-blue:hover,
.btn--prussian-blue:active,
.btn--prussian-blue:focus,
.btn--prussian-blue:active:focus {
    background-color: #003049;
    color: #FCBF49;
}

/* ----------- Each card background from why Choose us section ----------- */
.bg-card-child-care {
    background: url('../images/card-child-care.jpg') no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.bg-card-early-learning {
    background: url('../images/card-early-learning.jpg') no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.bg-card-pre-school {
    background: url('../images/card-pre-school.jpg') no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.bg-card-our-team {
    background: url('../images/card-our-team.jpg') no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}
/* ... */

